--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
+ul,li,h1,h2,h3,h4,h5,h6{
+margin:0px;padding:0px
+}
+ul li {
+  list-style-type: none;
+}
+a {
+  text-decoration: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.mr-1 {
+  margin-right: 1rem;
+}
+.mr-l{
+  margin-left: 1rem;
+}
+.mt-1{
+  margin-top: 1rem;
+}
+.mt-3{
+  margin-top: 3rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.m-2{
+  margin:1.5rem;
+}
+.mr-2{
+  margin-right:2rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.pr-1{
+  padding-right: 1rem;
+}
+p-2{
+  padding: 1.5rem;
+}
+
+.d-flex{
   display: flex;
-  flex-direction: column;
+}
+.align-center {
   align-items: center;
+}
+.justify-center {
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
